# Student-Data-Manager-GUI

./: LICENSE  README.md
SDM_1_0_0/: CMakeLists.txt  addnewstudentdialog.cpp  addnewstudentdialog.h  addnewstudentdialog.ui  editstudentdialog.cpp  editstudentdialog.h  editstudentdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  student.h  studentrecordtable.cpp  studentrecordtable.h  studentrecordtable.ui
